tests/errors/papercut/comb-port-in-condition.expect
---CODE---
1
---STDERR---
Error: 
4 |    le = std_le(32);
  |    ^^ [Papercut] Port `le.out` is an output port on combinational primitive `std_le` and will always output 0. Add a `with` statement to enable a combinational group to run the primitive.
